methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:8: error: value Green is not a member of object java.awt.Color
    if(getCouleurSol()==Color.Green){
                              ^