methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    // Write your code here
  if(estFaceMur()){
    return false
  }else{
    avance()
    if(getCouleurSol()==Color.Green){
      recule()
      return true;
    }else{
      recule()
      return false
    }
  }
}